objects/sumoapp__TextMessage__c.object
<CustomObject>
    <fields>
        <fullName>sumoapp__Body__c</fullName>
        <label>Body</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sumoapp__ContactRelation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Relation</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Text Messages</relationshipLabel>
        <relationshipName>TextMessages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sumoapp__ErrorDetails__c</fullName>
        <label>Error Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sumoapp__LeadRelation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead Relation</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Text Messages</relationshipLabel>
        <relationshipName>TextMessages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sumoapp__Recipient__c</fullName>
        <label>Recipient Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>sumoapp__SendTime__c</fullName>
        <label>Send Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>sumoapp__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SENT</fullName>
                    <label>Sent</label>
                </value>
                <value>
                    <fullName>SKIPPED</fullName>
                    <label>Skipped</label>
                </value>
                <value>
                    <fullName>OUT_OF_LIMIT</fullName>
                    <label>Out of Limit</label>
                </value>
                <value>
                    <fullName>ERROR</fullName>
                    <label>Error</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sumoapp__SumoEventId__c</fullName>
        <label>Sumo Event Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Text Message</label>
    <nameField>
        <displayFormat>A-{000000}</displayFormat>
        <label>Text Message Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Text Messages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>